--- a/blog/2019-11-05.md
+++ b/blog/2019-11-05.md
@@ -37,19 +37,19 @@ And who could forget the grand overseer of all the teams and the project as a wh
   
 ## How did we get here?
   
-We all first heard of aber sailbot on the 25th of September after Line and Colin boldly presented their past work to the entire comp sci department, an impressive display detailing all of the fantastic oppertunities that the club has will provide to it's members! 
-As such, immediately about half of us forgot about it and moved on.
+We all first heard of aber sailbot on the 25th of September after Line and Colin boldly presented their past work to the entire comp sci department, an impressive display detailing all of the fantastic opportunities that the club will provide to it's members! 
+As such, about half of us immediately forgot about it and moved on.
 
 Despite that, from there the team slowly grew, with more people being roped into the team each session until we got to where we are now, team     indentation error!
 
 ## What's the current goal?
 
 Well, making a sailboat is no easy feat as I'm sure anyone here could assure you.
-Whilst it might seem easy at first glance, if you dig even a little bit below the surface you'll quickly come to realise what a complex mass of interconnected systems there are for the boat to even function.
+Whilst it might seem easy at first glance, if you dig even a little bit below the surface you'll quickly come to realise what a complex mass of interconnected systems there are for the boat to even so much as function.
 So, as our first goal, we've been fabricating a boat for entry into the AberSailbot eXperimental Polystyrene Boats Competiton 2019.
 
-In this competiton, each team will _attempt_ to race a 1M polystyrene boat along a triangular course in Aberystwyth Harbour. We'll be scored on 4 categories - Functionality (does the boat... boat?), Build Quality (is the boat... a boat?), Process (does this webpage describe a... boat?) and Impressing the judges (do the judges like... the boat?).
+In this competiton, each team will _attempt_ to race a 1M polystyrene boat along a triangular course in Aberystwyth Harbour. We'll be scored on 4 categories - Functionality (does the boat... boat?), Build Quality (is the boat a... boat?), Process (does this webpage describe a... boat?) and Impressing the judges (do the judges like the...  boat?).
 
 We're given the base components, but the rest is up to us. 
-We have to assemble, code, test, _cry_ and modify the boat to functionality.
+We have to assemble, code, test, _cry_ and modify the boat all the way to functionality.
 
