--- a/blog/2019-11-05.md
+++ b/blog/2019-11-05.md
@@ -53,3 +53,7 @@ In this competiton, each team will _attempt_ to race a 1M polystyrene boat along
 We're given the base components, but the rest is up to us. 
 We have to assemble, code, test, _cry_ and modify the boat all the way to functionality.
 
+## So what have we done so far?
+
+Since this blog has come into existance fairly late into the process, for this week's progress report, we'll just blast through a bullet point list of everything we've done in as close to chronological order as I can decipher.
+
