--- a/blog/2019-11-05.md
+++ b/blog/2019-11-05.md
@@ -1,5 +1,3 @@
-wip
-
 # And so it begins...
 
 Hello and welcome to the official blog of team     indentaition error!
@@ -57,3 +55,18 @@ We have to assemble, code, test, _cry_ and modify the boat all the way to functi
 
 Since this blog has come into existance fairly late into the process, for this week's progress report, we'll just blast through a bullet point list of everything we've done in as close to chronological order as I can decipher.
 
+* Before we got here, the hull was cut from a block of polystyrene.
+* Reinforced the boat hull with fiberglass and epoxy resin
+* Vacuum bagged the boat to ensure the fibreglass and epoxy sealed cleanly to the hull
+* Defomed the only hull we were given rendering all of our progress useless
+* Panic!
+* There was a backup prototype hull, we're saved! 
+* Sanded down the new hull so it's finish is actually... *finished*
+* Cut and sewed together the two halves of the main sail
+* 3D modeled and printed out a bulb for the keel
+* 3D modeled reinforcement plate, fin and rudder
+* Got the hollow shell of a [website](https://indentationerror.com) up and running
+
+That's all folks!
+See you next week for another progress report ~
+That is if alex actually has the website's blog section running by then...
