--- a/blog/2019-11-05.md
+++ b/blog/2019-11-05.md
@@ -58,12 +58,15 @@ Since this blog has come into existance fairly late into the process, for this w
 * Before we got here, the hull was cut from a block of polystyrene.
 * Reinforced the boat hull with fiberglass and epoxy resin
 * Vacuum bagged the boat to ensure the fibreglass and epoxy sealed cleanly to the hull
+![DeadHull](https://github.com/abersailbot/IndentationError-site/blob/master/blog/2019-11-05/DeadHull.jpg)
 * Defomed the only hull we were given rendering all of our progress useless
 * Panic!
 * There was a backup prototype hull, we're saved! 
+![BackupHull](https://github.com/abersailbot/IndentationError-site/blob/master/blog/2019-11-05/BackupHull.jpg)
 * Sanded down the new hull so it's finish is actually... *finished*
 * Cut and sewed together the two halves of the main sail
 * 3D modeled and printed out a bulb for the keel
+![Bulb](https://github.com/abersailbot/IndentationError-site/blob/master/blog/2019-11-05/PrintedBulb.jpg)
 * 3D modeled reinforcement plate, fin and rudder
 * Got the hollow shell of a [website](https://indentationerror.com) up and running
 
